--- a/index.html
+++ b/index.html
@@ -1,37 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-    href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
-    rel="stylesheet"
-/>
-    <link rel="stylesheet" href="styles/styles.css" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gymolic</title>
-  </head>
-  <body>
+</head>
+<body>
     <header class="header">
-      <nav>
-        <div class="nav_header">
-          <div class="nav_logo">
-            <a href="#home"
-              ><img src="icons/logo.png" alt="Gymolic Logo" class="logo"
-            /></a>
-          </div>
-          <div class="nav_but" id="menu_btn">
-            <span><i class="ri-menu-line"></i></span>
-          </div>
-        </div>
-        <ul class="nav_links" id="nav_links">
-            <li class="link"><a href="#home">Home</a></li>
-            <li class="link"><a href="#classes">Classes</a></li>
-            <li class="link"><a href="#trainers">Trainers</a></li>
-            <li class="link"><a href="#packs">Packs</a></li>
-            <li class="link"><a href="#about">About us</a></li>
-            <li class="link"><button class="btn">Contact us</button></li>
-        </ul>
-      </nav>
+        <nav>
+            <div class="nav_header">
+                <div class="logo">
+                    <a href="#">
+                        <span></span>
+                    </a>
+                </div>
+            </div>
+            <ul class="nav_links" id="nav_links">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#classe">Classes</a></li>
+                <li><a href="#trainers">Trainers</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li><a href="#about">about</a></li>
+        </nav>
     </header>
-  </body>
+    
+</body>
 </html>
