--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
         <nav>
             <div class="nav_header">
                 <div class="logo">
-                    <a href="#">
-                        <span></span>
+                    <a href="#"><img src="icons/logo.png" alt="">
                     </a>
                 </div>
             </div>
@@ -19,8 +18,12 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#classe">Classes</a></li>
                 <li><a href="#trainers">Trainers</a></li>
+                <li><a href="#prices">Prices</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li><a href="#about">about</a></li>
+                <li><button class="btn">Contact Us</button></li>
+            </ul>
+
         </nav>
     </header>
     
