adding color palette and basic styling

--- a/index.html
+++ b/index.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/styles.css">i
     <title>Gymolic</title>
-</head>
-<body>
+  </head>
+  <body>
     <header class="header">
-        <nav>
-            <div class="nav_header">
-                <div class="logo">
-                    <a href="#"><img src="icons/logo.png" alt="">
-                    </a>
-                </div>
-            </div>
-            <ul class="nav_links" id="nav_links">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#classe">Classes</a></li>
-                <li><a href="#trainers">Trainers</a></li>
-                <li><a href="#prices">Prices</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li><a href="#about">about</a></li>
-                <li><button class="btn">Contact Us</button></li>
-            </ul>
-
-        </nav>
+      <nav>
+        <div class="nav_header">
+          <div class="logo">
+            <a href="#"><img src="icons/logo.png" alt="" /> </a>
+          </div>
+            <div class="menu_icon" id="menu_icon">
+                <span><i class="ri-menu-line"></i></span>
+        </div>
+        <ul class="nav_links" id="nav_links">
+          <li><a href="#home">Home</a></li>
+          <li><a href="#classe">Classes</a></li>
+          <li><a href="#trainers">Trainers</a></li>
+          <li><a href="#prices">Prices</a></li>
+          <li><a href="#contact">Contact</a></li>
+          <li><a href="#about">about</a></li>
+          <li><button class="btn">Contact Us</button></li>
+        </ul>
+      </nav>
     </header>
-    
-</body>
+  </body>
 </html>
