--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a href="#"><img src="icons/logo.png" alt="" /> </a>
           </div>
           <div class="menu_icon" id="menu_icon">
-            <span><i class="ri-menu-line"></i></span>
+            <button class="burger"><i class="ri-menu-line"></i></button>
           </div>
         </div>
         <ul class="nav_links" id="nav_links">
