--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <metbutton charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link
@@ -20,19 +20,19 @@
     <header class="header">
       <nav>
         <div class="nav_header">
-          <div class="logo">
-            <a href="#"><img src="icons/logo.png" alt="" /> </a>
+          <div class="nav_logo">
+            <a href="#"><img src="/icons/logo.png" alt="logo" />Gymolic</a>
           </div>
-          <div class="menu_icon" id="menu_icon">
-            <button class="burger"><i class="ri-menu-line"></i></button>
+          <div class="nav_menu_byn" id="menu-btn">
+            <span><i class="ri-menu-line"></i></span>
           </div>
         </div>
         <ul class="nav_links" id="nav_links">
           <li><a href="#home">Home</a></li>
-          <li><a href="#classe">Classes</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#classes">Classes</a></li>
           <li><a href="#trainers">Trainers</a></li>
           <li><a href="#prices">Prices</a></li>
-          <li><a href="#about">about</a></li>
           <li><button class="btn">Contact Us</button></li>
         </ul>
       </nav>
