--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
           </div>
         </div>
         <ul class="nav_links" id="nav_links">
-          <li><a href="#home">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#classes">Classes</a></li>
-          <li><a href="#trainers">Trainers</a></li>
-          <li><a href="#prices">Prices</a></li>
-          <li><button class="btn">Contact Us</button></li>
+          <li class="link"><a href="#home">Home</a></li>
+          <li class="link"><a href="#about">About</a></li>
+          <li class="link"><a href="#classes">Classes</a></li>
+          <li class="link"><a href="#trainers">Trainers</a></li>
+          <li class="link"><a href="#prices">Prices</a></li>
+          <li class="link"><button class="btn">Contact Us</button></li>
         </ul>
       </nav>
     </header>
