corriger l'identifiant du bouton de menu pour respecter la convention de nommage

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <div class="nav_logo">
             <a href="#"><img src="/icons/logo.png" alt="logo" />Gymolic</a>
           </div>
-          <div class="nav_menu_byn" id="menu-btn">
+          <div class="nav_menu_byn" id="menu_btn">
             <span><i class="ri-menu-line"></i></span>
           </div>
         </div>
