corriger l'identifiant du menu et ajouter du contenu à la section d'accueil

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <div class="nav_logo">
             <a href="#"><img src="/icons/logo.png" alt="logo" />Gymolic</a>
           </div>
-          <div class="nav_menu_byn" id="menu_btn">
+          <div class="nav_menu_btn" id="menu_btn">
             <span><i class="ri-menu-line"></i></span>
           </div>
         </div>
@@ -36,6 +36,21 @@
           <li class="link"><button class="btn">Contact Us</button></li>
         </ul>
       </nav>
+      <div class="section_container header_container" id="home">
+        <div class="header_img">
+          <img src="images/header.png" alt="" />
+        </div>
+        <div class="header_content">
+          <h4>Build Your Own Body</h4>
+          <h1 class="section_header">Get Fit, Stay Healthy</h1>
+          <p>
+            Join our gym today and embark on a transformative fitness journey
+            with expert trainers, state-of-the-art equipment, and a supportive
+            community dedicated to helping you achieve your health and wellness
+            goals.
+          </p>
+        </div>
+      </div>
     </header>
     <script src="scripts/index.js"></script>
   </body>
