--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         </div>
       </div>
     </header>
+    <script src="https://unpkg.com/scrollreveal"></script>
     <script src="scripts/index.js"></script>
   </body>
 </html>
