--- a/index.html
+++ b/index.html
@@ -52,6 +52,27 @@
         </div>
       </div>
     </header>
+
+    <section class="section_container about_container" id="about">
+      <div class="about_image">
+        <img src="images/about.png" alt="" class="about_bg" />
+        <img src="" alt="" />
+      </div>
+      <div class="about_content">
+        <h2 class="section_header">Our Story</h2>
+        <p class="description">
+          At Gymolic, we believe in empowering individuals to achieve their
+          fitness goals through a holistic approach that combines expert
+          guidance, cutting-edge facilities, and a supportive community. Our
+          journey began with a simple mission: to create a space where people
+          of all fitness levels can come together to improve their health,
+          build strength, and enhance their overall well-being. With a team of
+          dedicated trainers and state-of-the-art equipment, we are committed to
+          helping you every step of the way on your fitness journey.
+        </p>
+      </div>
+    </section>
+
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="scripts/index.js"></script>
   </body>
