ajouter une carte à la section "Notre histoire" pour présenter "Open The Gate"

--- a/index.html
+++ b/index.html
@@ -70,6 +70,16 @@
           dedicated trainers and state-of-the-art equipment, we are committed to
           helping you every step of the way on your fitness journey.
         </p>
+        <div class="about_grid">
+          <div class="about_card">
+            <span></span>
+            <div>
+              <h4>
+                Open The Gate
+              </h4>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
