ajouter des cartes d'information à la section "Notre histoire" pour améliorer la présentation des politiques et des services

--- a/index.html
+++ b/index.html
@@ -64,19 +64,54 @@
           At Gymolic, we believe in empowering individuals to achieve their
           fitness goals through a holistic approach that combines expert
           guidance, cutting-edge facilities, and a supportive community. Our
-          journey began with a simple mission: to create a space where people
-          of all fitness levels can come together to improve their health,
-          build strength, and enhance their overall well-being. With a team of
+          journey began with a simple mission: to create a space where people of
+          all fitness levels can come together to improve their health, build
+          strength, and enhance their overall well-being. With a team of
           dedicated trainers and state-of-the-art equipment, we are committed to
           helping you every step of the way on your fitness journey.
         </p>
         <div class="about_grid">
           <div class="about_card">
-            <span></span>
+            <span><i class="ri-ancient-gate-fill"></i></span>
             <div>
-              <h4>
-                Open The Gate
-              </h4>
+              <h4>Policy</h4>
+              <p>
+                At Gymolic, we are committed to providing a safe and inclusive
+                environment for all our members. Our policies are designed to
+                ensure the well-being of everyone in our community. We encourage
+                open communication and feedback to continuously improve our
+                services and facilities.
+              </p>
+            </div>
+          </div>
+
+
+          <div class="about_card">
+            <span><i class="ri-shield-fill"></i></span>
+            <div>
+              <h4>fully trusted</h4>
+              <p>
+                At Gymolic, we are committed to providing a safe and inclusive
+                environment for all our members. Our policies are designed to
+                ensure the well-being of everyone in our community. We encourage
+                open communication and feedback to continuously improve our
+                services and facilities.
+              </p>
+            </div>
+          </div>
+
+
+          <div class="about_card">
+            <span><i class="ri-team-line"></i></span>
+            <div>
+              <h4>Personnal Trainer</h4>
+              <p>
+                trainers are committed to providing a safe and inclusive
+                environment for all our members. Our policies are designed to
+                ensure the well-being of everyone in our community. We encourage
+                open communication and feedback to continuously improve our
+                services and facilities.
+              </p>
             </div>
           </div>
         </div>
