renommer la classe de description de section et ajuster les animations de défilement pour la section "À propos"

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </div>
       <div class="about_content">
         <h2 class="section_header">Our Story</h2>
-        <p class="description">
+        <p class="section_description">
           At Gymolic, we believe in empowering individuals to achieve their
           fitness goals through a holistic approach that combines expert
           guidance, cutting-edge facilities, and a supportive community. Our
@@ -85,7 +85,6 @@
             </div>
           </div>
 
-
           <div class="about_card">
             <span><i class="ri-shield-fill"></i></span>
             <div>
@@ -99,7 +98,6 @@
               </p>
             </div>
           </div>
-
 
           <div class="about_card">
             <span><i class="ri-team-line"></i></span>
