ajouter une section "Nos Cours" avec une description et des cartes pour les cours de fitness

--- a/index.html
+++ b/index.html
@@ -115,7 +115,25 @@
         </div>
       </div>
     </section>
-
+    <section class="section_container class_container" id="class">
+      <h2 class="sction_header">Our Classes</h2>
+      <p class="section_description">
+        Discover a variety of fitness classes designed to cater to all levels
+        and interests. From high-intensity interval training (HIIT) to calming
+        yoga sessions, our classes are led by experienced instructors who are
+        passionate about helping you achieve your fitness goals. Join us and
+        find the perfect class to fit your lifestyle and preferences.
+      </p>
+      <div class="class_grid">
+        <div class="class_card"></div>
+        <img src="/images/" alt="bg" class="class_bg" />
+        <img src="/images/" alt="bg" class="class_bg" />
+        <div class="class_content">
+          <h4>Weight Training</h4>
+          <p>Resistance training</p>
+        </div>
+      </div>
+    </section>
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="scripts/index.js"></script>
   </body>
