ajouter des descriptions pour les cours de fitness dans la section "Nos Cours"

--- a/index.html
+++ b/index.html
@@ -130,10 +130,46 @@
         <img src="/images/" alt="bg" class="class_bg" />
         <div class="class_content">
           <h4>Weight Training</h4>
+          <p>Weight lifting and resistance exercises</p>
+        </div>
+      </div>
+
+      <div class="class_grid">
+        <div class="class_card"></div>
+        <img src="/images/" alt="bg" class="class_bg" />
+        <img src="/images/" alt="bg" class="class_bg" />
+        <div class="class_content">
+          <h4>Cross Fit</h4>
           <p>Resistance training</p>
         </div>
       </div>
+
+      <div class="class_grid">
+        <div class="class_card"></div>
+        <img src="/images/" alt="bg" class="class_bg" />
+        <img src="/images/" alt="bg" class="class_bg" />
+        <div class="class_content">
+          <h4>Yoga & Pilates</h4>
+          <p>Flexibility and core strength training</p>
+        </div>
+      </div>
+
+      <div class="class_grid">
+        <div class="class_card"></div>
+        <img src="/images/" alt="bg" class="class_bg" />
+        <img src="/images/" alt="bg" class="class_bg" />
+        <div class="class_content">
+          <h4>HIIT</h4>
+          <p>High-intensity interval training</p>
+        </div>
+      </div>
+
     </section>
+
+
+
+
+
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="scripts/index.js"></script>
   </body>
