ajouter une section "Nos Entraîneurs" avec des descriptions et des cartes pour les entraîneurs

--- a/index.html
+++ b/index.html
@@ -163,12 +163,42 @@
           <p>High-intensity interval training</p>
         </div>
       </div>
-
     </section>
 
-
-
-
+    <section class="section_container trainer_container">
+      <h2 class="section_header">Our Trainers</h2>
+      <p class="section_description">
+        Meet our team of certified trainers who are dedicated to helping you
+        reach your fitness goals. With diverse expertise in various fitness
+        disciplines, our trainers provide personalized guidance and support to
+        ensure you get the most out of your workouts. Whether you're a beginner
+        or an experienced athlete, our trainers are here to motivate and inspire
+        you every step of the way.
+      </p>
+      <div class="trainer_grid">
+        <div class="trainer_card">
+          <img src="/images/trainer1.jpg" alt="Trainer 1" />
+        </div>
+        <div class="trainer_card">
+          <div class="trainer_content">
+            <h4>James Jones</h4>
+            <h5>Strength and Conditioning</h5>
+            <hr />
+            <p>
+              With a background in exercise science and nutrition, James is
+              passionate about helping clients achieve their fitness goals
+              through tailored workout plans and expert dietary advice.
+            </p>
+            <div class="trainer_socials">
+              <a href=""><i class="ri-twitter-x-line"></i></a>
+              <a href=""><i class="ri-facebook-fill"></i></a>
+              <a href=""><i class="ri-instagram-line"></i></a>
+              <a href=""><i class="ri-linkedin-box-line"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="scripts/index.js"></script>
