--- a/index.html
+++ b/index.html
@@ -200,6 +200,75 @@
       </div>
     </section>
 
+    <section class="section_container price_container" id="price">
+      <h2 class="section_header">Membership Pricing</h2>
+      <p class="section_description">
+        We offer a variety of membership options to suit your needs and budget.
+        Whether you're looking for a short-term commitment or a long-term plan,
+        we have the perfect solution for you. Contact us today to learn more
+        about our pricing and find the right membership for your fitness
+        journey.
+      </p>
+      <div class="price_grid">
+        <div class="price_card">
+          <div class="price_content">
+            <h4>Basic Plan</h4>
+            <img src="" alt="" />
+            <p>
+              Our Basic Plan offers access to all gym equipment and facilities
+              during standard hours, perfect for those starting their fitness
+              journey. Enjoy a supportive environment and essential amenities to
+              help you build healthy habits at an affordable rate.
+            </p>
+            <hr />
+            <h4>Key Features</h4>
+            <p>Access to all gym equipment</p>
+            <p>Group fitness classes</p>
+            <p>Personalized workout plans</p>
+          </div>
+          <button class="btn">Join Now</button>
+        </div>
+
+        <div class="price_card">
+          <div class="price_content">
+            <h4>Weekly Plan</h4>
+            <img src="" alt="" />
+            <p>
+              Our Weekly Plan offers access to all gym equipment and facilities
+              during standard hours, perfect for those starting their fitness
+              journey. Enjoy a supportive environment and essential amenities to
+              help you build healthy habits at an affordable rate.
+            </p>
+            <hr />
+            <h4>Key Features</h4>
+            <p>Access to all gym equipment</p>
+            <p>Group fitness classes</p>
+            <p>Personalized workout plans</p>
+          </div>
+          <button class="btn">Join Now</button>
+        </div>
+
+        <div class="price_card">
+          <div class="price_content">
+            <h4>Monthly Plan</h4>
+            <img src="" alt="" />
+            <p>
+              Our Monthly Plan offers access to all gym equipment and facilities
+              during standard hours, perfect for those starting their fitness
+              journey. Enjoy a supportive environment and essential amenities to
+              help you build healthy habits at an affordable rate.
+            </p>
+            <hr />
+            <h4>Key Features</h4>
+            <p>Access to all gym equipment</p>
+            <p>Group fitness classes</p>
+            <p>Personalized workout plans</p>
+          </div>
+          <button class="btn">Join Now</button>
+        </div>
+      </div>
+    </section>
+
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="scripts/index.js"></script>
   </body>
