ajouter des classes de style pour les plans de tarification et améliorer la mise en page des cartes de prix

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
       <div class="price_grid">
         <div class="price_card">
           <div class="price_content">
-            <h4>Basic Plan</h4>
+            <h4 class="plan">Basic Plan</h4>
             <img src="" alt="" />
             <p>
               Our Basic Plan offers access to all gym equipment and facilities
@@ -231,7 +231,7 @@
 
         <div class="price_card">
           <div class="price_content">
-            <h4>Weekly Plan</h4>
+            <h4 class="plan">Weekly Plan</h4>
             <img src="" alt="" />
             <p>
               Our Weekly Plan offers access to all gym equipment and facilities
@@ -250,7 +250,7 @@
 
         <div class="price_card">
           <div class="price_content">
-            <h4>Monthly Plan</h4>
+            <h4 class="plan">Monthly Plan</h4>
             <img src="" alt="" />
             <p>
               Our Monthly Plan offers access to all gym equipment and facilities
