--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css"
+    />
     <link rel="stylesheet" href="styles/styles.css" />
     <title>Gymolic</title>
   </head>
@@ -267,6 +271,14 @@
           <button class="btn">Join Now</button>
         </div>
       </div>
+    </section>
+
+    <section class="section_container client_container" id="client">
+      <h2 class="section_header">what our clients say about us?</h2>
+      <p class="section_description">
+        these testimonials showcase the positive experiences of our clients and
+        their fitness journeys.
+      </p>
     </section>
 
     <script src="https://unpkg.com/scrollreveal"></script>
