--- a/index.html
+++ b/index.html
@@ -282,6 +282,7 @@
     </section>
 
     <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
     <script src="scripts/index.js"></script>
   </body>
 </html>
