Implement code changes to enhance functionality and improve performance

--- a/index.html
+++ b/index.html
@@ -279,6 +279,33 @@
         these testimonials showcase the positive experiences of our clients and
         their fitness journeys.
       </p>
+      <div class="swiper">
+        <!-- Additional required wrapper -->
+        <div class="swiper-wrapper">
+          <!-- Slides -->
+          <div class="swiper-slide">
+            <div class="client_card">
+              <img src="" alt="" />
+              <div class="client_rating">
+                <span><i class="ri-star-fill"></i></span>
+                <span><i class="ri-star-fill"></i></span>
+                <span><i class="ri-star-fill"></i></span>
+                <span><i class="ri-star-fill"></i></span>
+                <span><i class="ri-star-line"></i></span>
+              </div>
+              <p>
+                "Gymolic has completely transformed my fitness journey! The
+                trainers are knowledgeable and supportive, and the facilities
+                are top-notch. I feel stronger and healthier than ever."
+              </p>
+              <h4>Moussa Sabbar</h4>
+              <h5>Software Engineer</h5>
+            </div>  
+          </div>
+
+          ...
+        </div>
+      </div>
     </section>
 
     <script src="https://unpkg.com/scrollreveal"></script>
