ajouter une image de client et améliorer le style des cartes de témoignages

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
           <!-- Slides -->
           <div class="swiper-slide">
             <div class="client_card">
-              <img src="" alt="" />
+              <img src="images/client.jpg" alt="" />
               <div class="client_rating">
                 <span><i class="ri-star-fill"></i></span>
                 <span><i class="ri-star-fill"></i></span>
