Implement code changes to enhance functionality and improve performance

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link
-      href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
       rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css"
     />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -59,7 +59,7 @@
 
     <section class="section_container about_container" id="about">
       <div class="about_image">
-        <img src="images/about.png" alt="" class="about_bg" />
+        <img src="" alt="" class="about_bg" />
         <img src="" alt="" />
       </div>
       <div class="about_content">
@@ -181,7 +181,7 @@
       </p>
       <div class="trainer_grid">
         <div class="trainer_card">
-          <img src="/images/trainer1.jpg" alt="Trainer 1" />
+          <img src="" alt="Trainer 1" />
         </div>
         <div class="trainer_card">
           <div class="trainer_content">
@@ -285,7 +285,7 @@
           <!-- Slides -->
           <div class="swiper-slide">
             <div class="client_card">
-              <img src="images/client.jpg" alt="" />
+              <img src="images/client1.jpg" alt="" />
               <div class="client_rating">
                 <span><i class="ri-star-fill"></i></span>
                 <span><i class="ri-star-fill"></i></span>
@@ -300,16 +300,73 @@
               </p>
               <h4>Moussa Sabbar</h4>
               <h5>Software Engineer</h5>
-            </div>  
+            </div>
           </div>
 
-          ...
+          <div class="swiper-slide">
+            <div class="client_card">
+              <img src="images/client1.jpg" alt="" />
+              <div class="client_rating">
+                <span><i class="ri-star-fill"></i></span>
+                <span><i class="ri-star-fill"></i></span>
+                <span><i class="ri-star-fill"></i></span>
+                <span><i class="ri-star-fill"></i></span>
+                <span><i class="ri-star-line"></i></span>
+              </div>
+              <p>
+                "Gymolic has completely transformed my fitness journey! The
+                trainers are knowledgeable and supportive, and the facilities
+                are top-notch. I feel stronger and healthier than ever."
+              </p>
+              <h4>Moussa Sabbar</h4>
+              <h5>Software Engineer</h5>
+            </div>
+          </div>
+
+          <div class="swiper-slide">
+            <div class="client_card">
+              <img src="images/client1.jpg" alt="" />
+              <div class="client_rating">
+                <span><i class="ri-star-fill"></i></span>
+                <span><i class="ri-star-fill"></i></span>
+                <span><i class="ri-star-fill"></i></span>
+                <span><i class="ri-star-fill"></i></span>
+                <span><i class="ri-star-line"></i></span>
+              </div>
+              <p>
+                "Gymolic has completely transformed my fitness journey! The
+                trainers are knowledgeable and supportive, and the facilities
+                are top-notch. I feel stronger and healthier than ever."
+              </p>
+              <h4>Moussa Sabbar</h4>
+              <h5>Software Engineer</h5>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="client_card">
+              <img src="images/client1.jpg" alt="" />
+              <div class="client_rating">
+                <span><i class="ri-star-fill"></i></span>
+                <span><i class="ri-star-fill"></i></span>
+                <span><i class="ri-star-fill"></i></span>
+                <span><i class="ri-star-fill"></i></span>
+                <span><i class="ri-star-line"></i></span>
+              </div>
+              <p>
+                "Gymolic has completely transformed my fitness journey! The
+                trainers are knowledgeable and supportive, and the facilities
+                are top-notch. I feel stronger and healthier than ever."
+              </p>
+              <h4>Moussa Sabbar</h4>
+              <h5>Software Engineer</h5>
+            </div>
+          </div>
         </div>
       </div>
     </section>
-
-    <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
+    <script src="https://unpkg.com/scrollreveal"></script>
+
     <script src="scripts/index.js"></script>
   </body>
 </html>
