ajouter un pied de page avec des liens sociaux et des informations sur l'entreprise

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css"
     />
     <link
-    href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
-    rel="stylesheet"
-  />
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles/styles.css" />
     <title>Gymolic</title>
   </head>
@@ -368,6 +368,55 @@
         </div>
       </div>
     </section>
+
+    <footer class="footer">
+      <div class="section_container .footer_container">
+        <div class="footer_">
+          <a href="icons/logo.png">Gymolic</a>
+        </div>
+        <p>
+          Take the first step towards a healthier you!, stronger you in body and
+          mind.
+        </p>
+        <div class="footer_socials">
+          <a href=""><i class="ri-twitter-x-line"></i></a>
+          <a href=""><i class="ri-facebook-fill"></i></a>
+          <a href=""><i class="ri-instagram-line"></i></a>
+          <a href=""><i class="ri-linkedin-box-line"></i></a>
+        </div>
+      </div>
+      <div class="footer_col">
+        <h4>Company</h4>
+        <div class="footer_links">
+          <a href="#about">Business</a>
+          <a href="#class">Franchise</a>
+          <a href="#trainers">Partnership</a>
+          <a href="#price">Network</a>
+        </div>
+
+        <div class="footer_col">
+        <h4>About Us</h4>
+        <div class="footer_links">
+          <a href="#about">Blogs</a>
+          <a href="#class">Security</a>
+          <a href="#trainers">Careers</a>
+        </div>
+      </div>
+
+      <div class="footer_col">
+        <h4>Support</h4>
+        <div class="footer_links">
+          <a href="#about">Contact Us</a>
+          <a href="#class">Privacy Policy</a>
+          <a href="#class">Terms of Service</a>
+          <a href="#class">BMI Calculator</a>
+        </div>
+      </div>
+      <div class="footer_bar">
+        Copyright © 2025 Gymolic. All rights reserved.
+      </div>
+
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
 
