adding some @media propreties for responsive design

--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
     </section>
 
     <footer class="footer">
-      <div class="section_container .footer_container">
+      <div class="section_container footer_container">
         <div class="footer_">
           <a href="icons/logo.png">Gymolic</a>
         </div>
