adding a new section called portfolio grid

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,35 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Next.js Developer Portfolio</title>
-  <link rel="stylesheet" href="styles/style.css" />
-</head>
-<body>
-  <header>
-    <nav class="navbar">
-      <ul>
-        <li><a href="#">About</a></li>
-        <li><a href="#" class="active">Projects</a></li>
-        <li><a href="#">Testimonials</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Next.js Developer Portfolio</title>
+    <link rel="stylesheet" href="styles/style.css" />
+  </head>
+  <body>
+    <header>
+      <nav class="navbar">
+        <ul>
+          <li><a href="#">About</a></li>
+          <li><a href="#" class="active">Projects</a></li>
+          <li><a href="#">Testimonials</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
 
-  <main class="hero">
-    <p class="subtitle">DYNAMIC WEB MAGIC WITH NEXT.JS</p>
-    <h1 class="headline">
-      Transforming Concepts into Seamless 
-      <span>User Experiences</span>
-    </h1>
-    <p class="intro">Hi! I'm John Doe, a Next.js Developer based in Russia.</p>
-    <button class="cta">
-      See my work <span class="arrow">↗</span>
-    </button>
-  </main>
+    <main class="hero">
+      <p class="subtitle">DYNAMIC WEB MAGIC WITH NEXT.JS</p>
+      <h1 class="headline">
+        Transforming Concepts into Seamless
+        <span>User Experiences</span>
+      </h1>
+      <p class="intro">
+        Hi! I'm Moussa Sabbar, a ReactJs Developer based in Morocco.
+      </p>
+      <button class="cta">See my work <span class="arrow">↗</span></button>
+    </main>
+    <section class="portfolio-grid">
+      <div class="card large collaboration">
+        <img src="Portfolio.png" alt="Laptop design" class="card-img" />
+        <div class="card-text">
+          <h3>
+            I prioritize client collaboration, fostering open communication
+          </h3>
+        </div>
+      </div>
+    </section>
 
-  <script src="scripts/script.js"></script>
-</body>
+    <script src="scripts/script.js"></script>
+  </body>
 </html>
