I added stack list and tags

--- a/portfolio.html
+++ b/portfolio.html
@@ -38,6 +38,26 @@
           </h3>
         </div>
       </div>
+      <div class="card timezone">
+    <h3>I'm very flexible with time zone communications</h3>
+    <div class="tags">
+      <span>USA</span>
+      <span>Germany</span>
+      <span>Russia</span>
+    </div>
+  </div>
+  div class="card tech-stack">
+    <p>I constantly try to improve</p>
+    <h3>My tech stack</h3>
+    <div class="stack-list">
+      <span>ReactJS</span>
+      <span>VueJS</span>
+      <span>Express</span>
+      <span>NuxtJS</span>
+      <span>Typescript</span>
+      <span>GraphQL</span>
+    </div>
+  </div>
     </section>
 
     <script src="scripts/script.js"></script>
