adding to the same section new cards called card passion and card project and contact card

--- a/portfolio.html
+++ b/portfolio.html
@@ -58,6 +58,19 @@
       <span>GraphQL</span>
     </div>
   </div>
+  <div class="card passion">
+    <h3>Tech enthusiast with a passion for development.</h3>
+  </div>
+
+  <div class="card project">
+    <h4>THE INSIDE SCOOP</h4>
+    <h3>Currently building a JS Animation library</h3>
+  </div>
+
+  <div class="card contact">
+    <h3>Do you want to start a project together?</h3>
+    <button class="copy-btn">📋 Copy my email address</button>
+  </div>
     </section>
 
     <script src="scripts/script.js"></script>
