fixing section problems in html file and css file

--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
       <span>Russia</span>
     </div>
   </div>
-  div class="card tech-stack">
+  <div class="card tech-stack">
     <p>I constantly try to improve</p>
     <h3>My tech stack</h3>
     <div class="stack-list">
