adding a project cards for my recent projects

--- a/portfolio.html
+++ b/portfolio.html
@@ -72,6 +72,23 @@
     <button class="copy-btn">📋 Copy my email address</button>
   </div>
     </section>
+    <section class="recent-projects">
+       <h2>A small selection of <span>recent projects</span></h2>
+  <div class="projects-grid">
+
+    <div class="project-card">
+      <img src="images/3d-solar.png" alt="3D Solar System" />
+      <h3>3D Solar System Planets to Explore</h3>
+      <p>Explore the wonders of our solar system with this captivating 3D simulation of the planets using Three.js.</p>
+      <div class="tech-icons">
+        <img src="icons/react.svg" alt="React" />
+        <img src="icons/threejs.svg" alt="Three.js" />
+        <img src="icons/motion.svg" alt="Framer Motion" />
+      </div>
+      <a href="#" class="live-link">Check Live Site ↗</a>
+    </div>
+
+    </section>
 
     <script src="scripts/script.js"></script>
   </body>
