new project card

--- a/portfolio.html
+++ b/portfolio.html
@@ -88,6 +88,20 @@
       <a href="#" class="live-link">Check Live Site ↗</a>
     </div>
 
+    <div class="project-card">
+      <img src="images/yoom-app.png" alt="Yoom App" />
+      <h3>Yoom – Video Conferencing App</h3>
+      <p>Simplify your video conferencing experience with Yoom. Seamlessly connect with colleagues and friends.</p>
+      <div class="tech-icons">
+        <img src="icons/nextjs.svg" alt="Next.js" />
+        <img src="icons/typescript.svg" alt="TypeScript" />
+        <img src="icons/tailwind.svg" alt="Tailwind" />
+      </div>
+      <a href="#" class="live-link">Check Live Site ↗</a>
+    </div>
+
+    
+
     </section>
 
     <script src="scripts/script.js"></script>
