--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Next.js Developer Portfolio</title>
+    <title>Moussa Sabbar</title>
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
